---
source: owl-parser/src/parser/stmt.rs
expression: "stmt(r#\"\n                if condition {\n                    if_block();\n                }\"#)"

---
Stmt {
    kind: IfElseStmt {
        condition: Expr {
            kind: Identifier(
                "condition",
            ),
            span: 20..29,
        },
        if_block: [
            Stmt {
                kind: ExprStmt(
                    Expr {
                        kind: FnCall {
                            callee: Expr {
                                kind: Identifier(
                                    "if_block",
                                ),
                                span: 52..60,
                            },
                            args: [],
                        },
                        span: 52..62,
                    },
                ),
                span: 52..63,
            },
        ],
        else_block: None,
    },
    span: 17..81,
}
